// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given <TableHeader /> When initializes And uses children Then should match the snapshot 1`] = `
<div>
  <table>
    <thead
      class="table-header"
    >
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <span
            class="text"
          >
            test 1
          </span>
        </td>
        <td
          class="table-cell"
        >
          <span
            class="text"
          >
            test 2
          </span>
        </td>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Given <TableHeader /> When initializes Then should match the snapshot 1`] = `
<div>
  <table>
    <thead
      class="table-header"
    >
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <span
            class="text"
          >
            test
          </span>
        </td>
      </tr>
    </thead>
  </table>
</div>
`;
